added sticky sidebar

--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 <body>
   <div class="nav" id="nav">
     <h1> Alirie Gray </h1>
-    <a href="#about"> About </a>
-    <a href="#projects"> Projects </a>
-    <a href="#skills"> Skills </a>
+    <div class="links">
+      <a href="#about"> About </a>
+      <a href="#projects"> Projects </a>
+      <a href="#skills"> Skills </a>
+    </div>
   </div>
 
   <div class="content">
     <div class="about" id="about">
+      <h1> About Me </h1>
       <p> I'm a software developer living in the San Francisco Bay Area. I like making websites and solving problems. I want to use code to move us towards a world in which all information is free and accessible. </p>
-      <p> I'm currently enrolled in a hands-on software engineering program called the <a href="https://www.makeschool.com/product-college"> Product College</a>, where I'm learning web frameworks, professional skills, data structures, and algorithms. I'm currently working on a cross-platform app that uses React, Node, and Socket.io to sync a live updating map across multiple mobile and web clients. </p>
+      <p> I'm currently enrolled in a hands-on software engineering program called the <a href="https://www.makeschool.com/product-college"> Product College</a>, where I'm learning web frameworks, professional skills, data structures, and algorithms. My current passion project is a cross-platform app that uses React, Node, and Socket.io to sync a live updating map across multiple mobile and web clients. </p>
       <p> When I'm not writing code, I enjoy rock climbing, playing Dungeons and Dragons, and experimenting with vegan cooking.</p>
     </div>
 
     <div class="projects" id="projects">
+      <h1> Projects </h1>
       <div class="project">
         <h2> HTTP Flashcard Website </h2>
         <h3> A website to help developers memorize the HTTP status codes </h3>
@@ -46,11 +50,31 @@
     </div>
 
     <div class="skills" id="skills">
-      Skills
+      <h1> Skills </h1>
+      <h2> Languages </h2>
+      <span class="skill"> JavaScript </span>
+      <span class="skill"> Python </span>
+      <span class="skill"> C# </span>
+      <h2> Front-End </h2>
+      <span class="skill"> HTML/CSS </span>
+      <span class="skill"> React & React Native </span>
+      <span class="skill"> Handlebars </span>
+      <h2> Back-End </h2>
+      <span class="skill"> Node </span>
+      <span class="skill"> Express </span>
+      <span class="skill"> Flask </span>
+      <span class="skill"> MongoDB, Mongoose </span>
+      <span class="skill"> Sequelize </span>
+      <h2> Other </h2>
+      <span class="skill"> Communication </span>
+      <span class="skill"> Leadership </span>
     </div>
 
     <div class="contact" id="contact">
-      Contact me! employ me
+      <h1> Contact Me! </h1>
+      <a href="https://www.linkedin.com/in/alirie-gray/"> LinkedIn </a>
+      <a href="https://github.com/Catislin"> GitHub </a>
+      alirie.gray@gmail.com
     </div>
   </div>
 
