fixed anchor problem

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 
 <body>
   <div class="nav" id="nav">
-    <h1> Alirie Gray </h1>
+    <div class="nav-header">
+      <h1> Alirie Gray </h1>
+      <img class="profile" src="circle_self.gif" height="150" width="150" >
+    </div>
     <div class="links">
-      <a href="#about"> About </a>
-      <a href="#projects"> Projects </a>
-      <a href="#skills"> Skills </a>
+      <a href="#about" style="padding:10px"> About </a>
+      <a href="#projects" style="padding:10px"> Projects </a>
+      <a href="#skills" style="padding:10px"> Skills </a>
     </div>
   </div>
 
@@ -55,9 +58,12 @@
       <span class="skill"> JavaScript </span>
       <span class="skill"> Python </span>
       <span class="skill"> C# </span>
+      <span class="skill"> Java </span>
       <h2> Front-End </h2>
       <span class="skill"> HTML/CSS </span>
-      <span class="skill"> React & React Native </span>
+      <span class="skill"> React and React Native </span>
+      <span class="skill"> React Router </span>
+      <span class="skill"> Redux </span>
       <span class="skill"> Handlebars </span>
       <h2> Back-End </h2>
       <span class="skill"> Node </span>
@@ -66,15 +72,18 @@
       <span class="skill"> MongoDB, Mongoose </span>
       <span class="skill"> Sequelize </span>
       <h2> Other </h2>
-      <span class="skill"> Communication </span>
       <span class="skill"> Leadership </span>
+      <span class="skill"> Communication and collaboration </span>
+      <span class="skill"> Writing clean, well-documented code </span>
     </div>
 
     <div class="contact" id="contact">
       <h1> Contact Me! </h1>
-      <a href="https://www.linkedin.com/in/alirie-gray/"> LinkedIn </a>
-      <a href="https://github.com/Catislin"> GitHub </a>
-      alirie.gray@gmail.com
+      <div class="contact-links">
+        <a href="https://www.linkedin.com/in/alirie-gray/"> LinkedIn </a>
+        <a href="https://github.com/Catislin"> GitHub </a>
+        alirie.gray@gmail.com
+      </div>
     </div>
   </div>
 
