fixed header issues

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="#about" style="padding:10px"> About </a>
       <a href="#projects" style="padding:10px"> Projects </a>
       <a href="#skills" style="padding:10px"> Skills </a>
+      <a href="#contact" style="padding:10px"> Contact </a>
     </div>
   </div>
 
@@ -82,6 +83,7 @@
       <div class="contact-links">
         <a href="https://www.linkedin.com/in/alirie-gray/"> LinkedIn </a>
         <a href="https://github.com/Catislin"> GitHub </a>
+        <a href="https://codepen.io/alirie/"> CodePen </a>
         alirie.gray@gmail.com
       </div>
     </div>
