--- a/index.html
+++ b/index.html
@@ -54,32 +54,32 @@
     </div>
 
     <div class="skills" id="skills">
-      <h1> Skills </h1>
-      <h2> Languages </h2>
+      <h1 style="margin-bottom:0px"> Skills </h1>
       <div class="skill-category">
+        <h2> Languages </h2>
         <span class="skill"> JavaScript </span>
         <span class="skill"> Python </span>
         <span class="skill"> C# </span>
         <span class="skill"> Java </span>
       </div>
-      <h2> Front-End </h2>
       <div class="skill-category">
+        <h2> Front-End </h2>
         <span class="skill"> HTML/CSS </span>
         <span class="skill"> React and React Native </span>
         <span class="skill"> React Router </span>
         <span class="skill"> Redux </span>
         <span class="skill"> Handlebars </span>
       </div>
-      <h2> Back-End </h2>
       <div class="skill-category">
+        <h2> Back-End </h2>
         <span class="skill"> Node </span>
         <span class="skill"> Express </span>
         <span class="skill"> Flask </span>
         <span class="skill"> MongoDB, Mongoose </span>
         <span class="skill"> Sequelize </span>
       </div>
-      <h2> Other </h2>
       <div class="skill-category">
+        <h2> Other </h2>
         <span class="skill"> Leadership </span>
         <span class="skill"> Communication and collaboration </span>
         <span class="skill"> Writing clean, well-documented code </span>
