fixed flex wrap issue

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
         </a>
         <p> The user is shown an HTTP status code (e.g., 404, 200, etc.) and given four options to select the correct corresponding meaning from. If the user is logged in, every correct answer will be stored on their account as a point. </p>
         <p> Technologies used: </p>
-        <span class="tech"> JavaScript </span>
-        <span class="tech"> Node </span>
-        <span class="tech"> Express </span>
-        <span class="tech"> MongoDB </span>
-        <span class="tech"> Handlebars </span>
+        <div class="tech-container">
+          <span class="tech"> JavaScript </span>
+          <span class="tech"> Node </span>
+          <span class="tech"> Express </span>
+          <span class="tech"> MongoDB </span>
+          <span class="tech"> Handlebars </span>
+        </div>
 
       </div>
       <div class="project">
@@ -65,9 +67,11 @@
         </a>
         <p> The user can click the "generate" button to create a new article title, and can save their favorites. The favorites are currently stored in a SQL database. My next step is to connect the website to the Twitter API, so that the user can Tweet their favorite generated titles! </p>
         <p> Technologies used: </p>
-        <span class="tech"> Python </span>
-        <span class="tech"> Flask </span>
-        <span class="tech"> SQLAlchemy </span>
+        <div class="tech-container">
+          <span class="tech"> Python </span>
+          <span class="tech"> Flask </span>
+          <span class="tech"> SQLAlchemy </span>
+        </div>
       </div>
       <div class="project">
         <a href="https://github.com/Catislin/Activize-Mobile">
@@ -88,10 +92,12 @@
         </a>
         <p> This game teaches the user how all the elements in the universe came about, starting from just hydrogen. As the user fuses elements together, simulating the fusion process that happens in the cores of stars, their personal periodic table attached to their account is filled out.  </p>
         <p> Technologies used: </p>
-        <span class="tech"> JavaScript </span>
-        <span class="tech"> Node </span>
-        <span class="tech"> Express </span>
-        <span class="tech"> Handlebars </span>
+        <div class="tech-container">
+          <span class="tech"> JavaScript </span>
+          <span class="tech"> Node </span>
+          <span class="tech"> Express </span>
+          <span class="tech"> Handlebars </span>
+        </div>
 
       </div>
     </div>
@@ -181,7 +187,7 @@
     </div>
 
     <div class="contact" id="contact">
-      <h1> Contact Me! </h1>
+      <h1> Contact Me </h1>
       <div class="contact-links">
         <span> LinkedIn: <a href="https://www.linkedin.com/in/alirie-gray/"> alirie-gray </a> </span>
         <span> GitHub: <a href="https://github.com/Catislin">    catislin </a> </span>
