--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
       <div class="contact-icons">
         <a href="mailto:alirie.gray@gmail.com"> <img src="little-envelope.png"> </a>
         <a href="https://www.linkedin.com/in/alirie-gray/"> <img src="linked.png"> </a>
-        <a href="https://github.com/Catislin"> <img src="github-logo.png"> </a>
+        <a href="https://github.com/aliriegray"> <img src="github-logo.png"> </a>
         <a href="https://codepen.io/alirie/"> <img src="codepen.png"> </a>
       </div>
   </div>
 
   <div class="content">
     <div class="about" id="about">
-      <h1> About Me </h1>
+      <h1> About Me</h1>
       <p> I'm a software developer living in the San Francisco Bay Area. I like making websites and solving problems. I want to use code to move us towards a world in which all information is free and accessible. </p>
-      <p> I'm currently enrolled in a hands-on software engineering program called the Product College, where I'm learning web frameworks, professional skills, data structures, and algorithms. My current passion project is a cross-platform app that uses React, Node, and Socket.io to sync a live updating map across multiple mobile and web clients. </p>
+      <p> I'm currently enrolled in a hands-on software engineering program called Make School, where I'm learning web frameworks, professional skills, data structures, and algorithms. My current passion project is a cross-platform app that uses React, Node, and Socket.io to sync a live updating map across multiple mobile and web clients. </p>
       <p> When I'm not writing code, I enjoy rock climbing, playing Dungeons and Dragons, and experimenting with vegan cooking.</p>
     </div>
 
