--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="project">
-        <a href="https://github.com/Catislin/Activize-Mobile">
+        <a href="https://github.com/aliriegray/Activize-Mobile">
           <h2> Activize Mobile App</h2>
           <p> A cross-platform mobile app to help activists organize safely and efficiently. </p>
         </a>
@@ -91,7 +91,6 @@
         <span class="tech"> React Native </span>
         <span class="tech"> Redux </span>
         <span class="tech"> Google Maps API </span>
-
       </div>
       <div class="project">
         <a href="https://elementgenerator.herokuapp.com">
@@ -199,7 +198,7 @@
       <div class="contact-links">
         <span> LinkedIn: <a href="https://www.linkedin.com/in/alirie-gray/"> alirie-gray </a> </span>
         <div>
-          GitHub: <a href="https://github.com/Catislin"> Catislin  </a> </div>
+          GitHub: <a href="https://github.com/aliriegray"> aliriegray  </a> </div>
         <span> CodePen: <a href="https://codepen.io/alirie/"> alirie </a> </span>
         <div>
           Email:  alirie.gray@gmail.com </div>
