--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="about" id="about">
       <h1> About Me</h1>
       <p> I'm a software developer living in the San Francisco Bay Area. I like making websites and solving problems. I want to use code to move us towards a world in which all information is free and accessible. </p>
-      <p> I'm currently enrolled in a hands-on software engineering program called Make School, where I'm learning web frameworks, professional skills, data structures, and algorithms. My current passion project is a cross-platform app that uses React, Node, and Socket.io to sync a live updating map across multiple mobile and web clients. </p>
-      <p> When I'm not writing code, I enjoy rock climbing, playing Dungeons and Dragons, and experimenting with vegan cooking.</p>
+      <p> I'm currently enrolled in a hands-on software engineering program called Make School, where I'm learning web frameworks, professional skills, data structures, and algorithms. My current passion project is a cross-platform app that uses React Native, Node, and Socket.io to sync a live updating map across multiple mobile and web clients. </p>
+      <p> When I'm not writing code, I enjoy playing Overwatch, Dungeons and Dragons, and rock climbing. </p>
     </div>
 
     <div class="projects" id="projects">
